Bug Fix: Grid-Border Misaligned

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 
     flex-wrap: wrap;
     border: solid rgb(0, 0, 0) 3px;
-    margin-left: -.1rem;
+    margin-left: -.2rem;
 }
 
 .square {
@@ -42,7 +42,7 @@ body {
     background-color: rgb(120, 141, 255);
     color: white;
     border: solid rgb(113, 121, 235) 3px;
-    border-radius: .7rem;
+    border-radius: .2rem;
     padding: .1rem;
     padding-left: .7rem;
     padding-right: .7rem;
@@ -92,7 +92,7 @@ img {
     background-color: rgb(41, 189, 65);
     color: white;
     border: solid rgb(0, 179, 74) 5px;
-    border-radius: .7rem;
+    border-radius: .6rem;
     padding: .7rem;
     cursor: pointer;
 }
